# code-insight-hub

./: .gitignore  .gitmodules  README.md
HAMi/: README.md  hami_chats_001.md
HAMi/specs/: arch.md  hami-device-plugin.md
codex/: README.md  codex_001.md
codex/code/example/ai-agent/: .env.example  .gitignore  Cargo.toml  README.md
codex/code/example/ai-agent/examples/: flight_booking_demo.rs
codex/code/example/ai-agent/src/: agent.rs  client.rs  flight_tools.rs  lib.rs  main.rs  protocol.rs  tools.rs
codex/code/example/ai-agent/tests/: integration_test.rs
codex/specs/: agent-architecture-comparison.md  ai-agent.md  codex-arch.md  codex_tui.md  codex_tui_plan.md
docs/: GitSubModule.md
outputs/: README.md  convert_csv_to_xlsx.py  rd_schedule_2025_Jul_Dec.csv
rancher/: README.md  rancher_001.md
